# Gist

./: CMakeLists.txt  conanfile.py  conanfile.txt
include/: Gist.h
test_package/: CMakeLists.txt  conanfile.py  main.cpp
test_package/GistTest/: Test_CoreFrequencyDomainFeatures.cpp  Test_CoreTimeDomainFeatures.cpp  Test_Gist.cpp  Test_MFCC.cpp  Test_OnsetDetectionFunction.cpp  Test_Pitch.cpp
